Pin compatible Streamlit/LangChain deps and remove langchain-classic fallback

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-langchain
-langchain-classic
-langchain-community
-langchain-google-genai
-wikipedia
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-google-genai==1.0.10
+streamlit==1.33.0
+wikipedia==1.4.0
